--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -1,8 +1,4 @@
-/*!
- * SlickNav Responsive Mobile Menu v1.0.10
- * (c) 2016 Josh Cope
- * licensed under MIT
- */
+
 
 .slicknav_btn {
     position: relative;
@@ -19,7 +15,7 @@
 }
 
 .slicknav_menu {
-    *zoom: 1;
+    zoom: 1;
 }
 
 .slicknav_menu .slicknav_menutxt {
